[gd_scene load_steps=10 format=1]

[ext_resource path="res://src/actors/enemies/soap_bubble/soap_bubble.gd" type="Script" id=1]
[ext_resource path="res://src/actors/enemies/soap_bubble/soap_bubble_01.png" type="Texture" id=2]
[ext_resource path="res://src/actors/enemies/soap_bubble/soap_bubble_02.png" type="Texture" id=3]
[ext_resource path="res://src/actors/enemies/soap_bubble/soap_bubble_pop.png" type="Texture" id=4]
[ext_resource path="res://src/audio/sfx/sfx.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -11.1923, -10.3166, 11.8594, -9.92922, 10.116, 9.44193, -11.5797, 10.0231 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "popped",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:monitoring")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:monitorable")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:animation")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "popped" ]
}

[sub_resource type="Animation" id=4]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:extra_motion")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( -1.86607, -1.86607 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 200 ) ]
}

[node name="soap_bubble" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.193703, -0.19371 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision/layers = 18
script/script = ExtResource( 1 )
movement_speed = -80
random_y_range = 10
motion = "linear"
destroy_sound = "explode"
group = "none"
reset_bonus = false

[node name="collision" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 0.193703, -0.19371 )
build_mode = 0
polygon = Vector2Array( -11.5797, 10.0231, 10.116, 9.44193, 11.8594, -9.92922, -11.1923, -10.3166 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="sprite" type="AnimatedSprite" parent="."]

visibility/blend_mode = 1
frames = SubResource( 2 )
animation = "default"
playing = true
modulate = Color( 1, 1, 1, 0.918033 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -25.7482, 0 )
transform/scale = Vector2( 0.215595, 1 )
rect = Rect2( -30, -30, 300, 60 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 3 )
anims/zigzag = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sfx" parent="." instance=ExtResource( 5 )]

[connection signal="area_enter" from="." to="." method="_on_soap_bubble_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_soap_bubble_body_enter"]

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


